--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "simditor-qn",
   "version": "1.0.0",
-  "description": "express route",
+  "description": "express middleware for simditor-qn",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "npm publish .",
+    "test"  : "node test/app.js"
   },
   "repository": {
     "type": "git",
